modified:   index.html

--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
         </main>
         <footer>
             <div class="icons">
-                <a href="#instagram"><img src="images/instagram.png" alt=""></a>
-                <a href="#linkedin"><img src="images/linkedin.png" alt=""></a>
-                <a href="#github"><img src="images/github.png" alt=""></a>
+                <a href="https://www.instagram.com/swayam.motghare.05/"><img src="images/instagram.png" alt=""></a>
+                <a href="https://www.linkedin.com/in/swayam-motghare-05/"><img src="images/linkedin.png" alt=""></a>
+                <a href="https://github.com/swayam-motghare"><img src="images/github.png" alt=""></a>
             </div>
         </footer>
     </body>
