new file:   about.html 	new file:   contact.html 	new file:   images/github(1).png 	new file:   images/gmail.png 	new file:   images/imageone.png 	new file:   images/mail.png 	new file:   images/telephone (1).png 	new file:   images/telephone.png 	modified:   index.html 	new file:   project.html 	deleted:    style.css

--- a/about.html
+++ b/about.html
@@ -39,46 +39,35 @@
                 border-radius: 8px;
             } 
             main{
-                margin-top: 150px;
+                margin-top: 100px;
                 text-align: left;
             } 
-            .fname{
-                font-size: 70px;
-                font-weight: bold;
+            .about-me{
+                font-size: 22px;
                 color: #102601;
-                text-align: left;
+                margin-top: 0px;
                 margin-left: 50px;
-                transition: 0.5s;
-
-            } 
-            .fname:hover{
-                color: #2E5902;
-                letter-spacing: 2px;
             }
-            .lname{
-                font-size: 80px;
-                font-weight: bold;
-                color: #102601;
-                text-align: left;
-                margin-left: 50px;
-                transition: 0.5s;
-            }
-            .lname:hover{
-                color: #2E5902;
-                letter-spacing: 3px;
-            }
-            .title{
+            .about-me h1{
                 font-size: 40px;
-                font-weight: bold;
-                color: #102601;
-                text-align: left;
-                margin-left: 50px;
-                letter-spacing: 5px;
+                margin-bottom: 20px;
                 transition: 0.5s;
             }
-            .title:hover{
-                color: #2E5902;
-                letter-spacing: 8px;
+            .about-me h1:hover{
+                color: #101f01;
+                letter-spacing: 5px;
+            }
+            p{
+                width: 450px;
+                transition: 0.5s;
+            }
+            p:hover{
+                transform: scale(1.2);
+            }
+            aside{
+                margin-top: -150px;
+                margin-left: 550px;
+                float: right;
             }
             .icons{
                 position: relative;
@@ -107,9 +96,10 @@
             </div>
         </header>
         <main>
-            <div class="fname">Swayam</div>
-            <div class="lname">Motghare</div>
-            <div class="title"><span>Web</span>-<span>Designer</span></div>
+            <div class="about-me">
+                <h1>About Me</h1>
+                <p>Hi, I'm Swayam Motghare, a passionate web designer and developer. I specialize in creating responsive and user-friendly websites using modern technologies like HTML, CSS, JavaScript, and React. My goal is to build visually appealing and functional web experiences that meet the needs of both clients and users.</p>
+            </div>
         </main>
         <footer>
             <div class="icons">
