--- a/project.html
+++ b/project.html
@@ -42,43 +42,24 @@
                 margin-top: 150px;
                 text-align: left;
             } 
-            .fname{
-                font-size: 70px;
-                font-weight: bold;
+            .about-me{
+                font-size: 22px;
                 color: #102601;
-                text-align: left;
+                margin-top: 0px;
                 margin-left: 50px;
-                transition: 0.5s;
-
-            } 
-            .fname:hover{
-                color: #2E5902;
-                letter-spacing: 2px;
             }
-            .lname{
-                font-size: 80px;
-                font-weight: bold;
-                color: #102601;
-                text-align: left;
-                margin-left: 50px;
-                transition: 0.5s;
-            }
-            .lname:hover{
-                color: #2E5902;
-                letter-spacing: 3px;
-            }
-            .title{
+            .about-me h1{
                 font-size: 40px;
-                font-weight: bold;
-                color: #102601;
-                text-align: left;
-                margin-left: 50px;
-                letter-spacing: 5px;
-                transition: 0.5s;
+                margin-bottom: 20px;
+                text-decoration: underline #102601 2px;
             }
-            .title:hover{
-                color: #2E5902;
-                letter-spacing: 8px;
+            p{
+                width: 450px;
+            }
+            aside{
+                margin-top: -150px;
+                margin-left: 550px;
+                float: right;
             }
             .icons{
                 position: relative;
@@ -107,9 +88,15 @@
             </div>
         </header>
         <main>
-            <div class="fname">Swayam</div>
-            <div class="lname">Motghare</div>
-            <div class="title"><span>Web</span>-<span>Designer</span></div>
+            <div class="about-me">
+                <h1>Projects</h1>
+                <p>Here are some of my recent projects:</p>
+                <ul>
+                    <li>Project 1: Description of project 1</li>
+                    <li>Project 2: Description of project 2</li>
+                    <li>Project 3: Description of project 3</li>
+                </ul>
+            </div>
         </main>
         <footer>
             <div class="icons">
