modified:   project.html

--- a/project.html
+++ b/project.html
@@ -51,7 +51,11 @@
             .about-me h1{
                 font-size: 40px;
                 margin-bottom: 20px;
-                text-decoration: underline #102601 2px;
+                transition: 0.5s;
+            }
+            .about-me h1:hover{
+                color: #101f01;
+                letter-spacing: 2px;
             }
             p{
                 width: 450px;
@@ -90,12 +94,13 @@
         <main>
             <div class="about-me">
                 <h1>Projects</h1>
-                <p>Here are some of my recent projects:</p>
+                <!-- <p>Here are some of my recent projects:</p>
                 <ul>
                     <li>Project 1: Description of project 1</li>
                     <li>Project 2: Description of project 2</li>
                     <li>Project 3: Description of project 3</li>
-                </ul>
+                </ul> -->
+                <p>Projects will be updated soon...</p>
             </div>
         </main>
         <footer>
