--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:ital,wght@0,1..1000;1,1..1000&display=swap" rel="stylesheet">
+        <link rel="shortcut icon" href="images/palm-tree.png" type="image/x-icon">
         <style>
             body{
             background-color: #0339A6;
@@ -53,7 +54,7 @@
             } 
             .fname:hover{
                 color: #2E5902;
-                letter-spacing: 3px;
+                letter-spacing: 5px;
             }
             .lname{
                 font-size: 80px;
@@ -65,7 +66,7 @@
             }
             .lname:hover{
                 color: #2E5902;
-                letter-spacing: 3px;
+                letter-spacing: 5px;
             }
             .title{
                 font-size: 40px;
