--- a/about.html
+++ b/about.html
@@ -9,6 +9,10 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:ital,wght@0,1..1000;1,1..1000&display=swap" rel="stylesheet">
+        <link rel="shortcut icon" href="images/palm-tree.png" type="image/x-icon">
+        <meta name="keywords" content="designer, web designer, Swayam Motghare, Swayam, Motghare, portfolio, contact Swayam Motghare, about Swayam Motghare, projects of Swayam Motghare, webdeveloper, front-end developer, Swayam Motghare webdesigner, github Swayam Motghare, linkedin Swayam Motghare, instagram Swayam Motghare, html, css, javascript, portfolio website">
+        <meta name="description" content="This is the portfolio website of Swayam Motghare, a web designer and front-end developer. Explore my projects, learn more about me, and get in touch!">
+        <link rel="author" href="https://swayam-motghare.github.io/">
         <style>
             body{
             background-color: #0339A6;
