modified:   about.html 	modified:   contact.html 	modified:   index.html 	modified:   project.html 	new file:   style.css

--- a/about.html
+++ b/about.html
@@ -4,42 +4,14 @@
         <title>About | Swayam-Motghare</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- <link rel="stylesheet" href="style.css"> -->
+        <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:ital,wght@0,1..1000;1,1..1000&display=swap" rel="stylesheet">
         <link rel="shortcut icon" href="images/palm-tree.png" type="image/x-icon">
         <link rel="author" href="https://swayam-motghare.github.io/">
-        <style>
-            body{
-            background-color: #0339A6;
-            margin: 0px;
-            font-family: 'Sofia sans', cursive;
-            background-image: url(images/background.jpg);
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-attachment: fixed;
-            }
-            .navbar{
-                display: inline-block;
-                text-align: left;
-                width: 100%;
-                margin: 15px;
-            }
-            .navbar a{
-                text-decoration: none;
-                color: #102601;
-                margin: 5px;
-                padding: 5px 15px;
-                font-size: 20px;
-                transition: 0.3s;
-            }
-            .navbar a:hover{
-                background-color: #102601;
-                color: white;
-                border-radius: 8px;
-            } 
+        <style> 
             main{
                 margin-top: 100px;
                 text-align: left;
