--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Swayam-Motghare | Web-Designer</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- <link rel="stylesheet" href="style.css"> -->
+        <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
         <meta name="description" content="This is the portfolio website of Swayam Motghare, a web designer and front-end developer. Explore my projects, learn more about me, and get in touch!">
         <link rel="author" href="https://swayam-motghare.github.io/">
         <style>
-            body{
+            /*body{
             background-color: #0339A6;
             margin: 0px;
             font-family: 'Sofia sans', cursive;
@@ -41,7 +41,7 @@
                 background-color: #102601;
                 color: white;
                 border-radius: 8px;
-            } 
+            } */
             main{
                 margin-top: 150px;
                 text-align: left;
