--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
         <title>Contact | Swayam-Motghare</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- <link rel="stylesheet" href="style.css"> -->
+        <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
         <link rel="shortcut icon" href="images/palm-tree.png" type="image/x-icon">
         <link rel="author" href="https://swayam-motghare.github.io/">
         <style>
-            body{
+           /* body{
             background-color: #0339A6;
             margin: 0px;
             font-family: 'Sofia sans', cursive;
@@ -39,7 +39,7 @@
                 background-color: #102601;
                 color: white;
                 border-radius: 8px;
-            } 
+            } */
             main{
                 margin-top: 50px;
                 text-align: left;
@@ -105,7 +105,7 @@
                 <p>If you'd like to get in touch, feel free to reach out via email or follow me on social media !</p>
                 <div class="contact">
                     <ul>
-                        <li><a href="mailto:motghareswayam@gmail.com" class="email" target="_blank"><img src="images/mail.png" alt="gmail" class="icons" >motghareswayam@gmail.com</a></li>
+                        <li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=motghareswayam@gmail.com" class="email" target="_blank"><img src="images/mail.png" alt="gmail" class="icons" >motghareswayam@gmail.com</a></li>
                         <li><a href="https://github.com/Swayam-Motghare" class="github" target="_blank"><img src="images/github.png" alt="github" class="icons">github.com/Swayam-Motghare</a></li>
                         <li><a href="https://www.linkedin.com/in/swayammotghare2005/" class="linkedin" target="_blank"><img src="images/linkedin.png" alt="linkedin" class="icons">linkedin.com/swayam-motghare-05</a></li>
                         <li><a href="https://www.instagram.com/swayam.motghare.05/" class="insta" target="_blank"><img src="images/instagram.png" alt="instagram" class="icons">instagram.com/swayam.motghare.05</a></li>
