--- a/project.html
+++ b/project.html
@@ -4,45 +4,14 @@
         <title>Projects | Swayam-Motghare</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- <link rel="stylesheet" href="style.css"> -->
+        <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:ital,wght@0,1..1000;1,1..1000&display=swap" rel="stylesheet">
         <link rel="shortcut icon" href="images/palm-tree.png" type="image/x-icon">
         <link rel="author" href="https://swayam-motghare.github.io/">
-        <style>
-            body{
-            background-color: #0339A6;
-            margin: 0px;
-            font-family: 'Sofia sans', cursive;
-            background-image: url(images/background.jpg);
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-attachment: fixed;
-            }
-            header{
-                width: 40vw;
-            }
-            .navbar{
-                display: grid;
-                grid-template-columns: repeat(4, 1fr);
-                margin: 15px;
-            }
-            .navbar a{
-                text-decoration: none;
-                color: #102601;
-                font-size: 22px;
-                margin: 0px 20px;
-                text-align: center;
-                transition: 0.5s;
-            }
-            .navbar a:hover{
-                letter-spacing: 2px;
-                background-color: #102601;
-                color: white;
-                border-radius: 8px;
-            }            
+        <style>            
             main{
                 margin-top: 150px;
                 text-align: left;
